# OAgent

./: .env-sample  .gitignore  README.md  docker-compose.override.yaml  docker-compose.yaml  main.py  pyproject.toml  start.sh  stop.sh
etc/docs/: faq.txt
flight_server/: .dockerignore  Dockerfile  booking.py  database.py  flights.py  main.py  requirements.txt  utils.py
src/: .dockerignore  Dockerfile  agent_def.py  chroma.py  config.py  main.py  model.py  requirements.txt  tools.py
