[project]
name = "OAgent"
version = "0.1.0"
description = "Agentic Chatbot"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "langchain-chroma>=0.2.2",
    "langchain-community>=0.3.20",
    "langchain-ollama>=0.3.0",
    "langchain-openai>=0.3.9",
    "langchain-text-splitters>=0.3.7",
    "openai-agents>=0.0.6",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "streamlit>=1.43.2",
    "unstructured>=0.17.2",
]
